--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,9 @@ dependencies {
     implementation 'com.yanzhenjie:permission:2.0.2'
     implementation 'de.javagl:obj:0.2.1'
     implementation 'com.google.ar:core:1.0.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.0.0'
+    //implementation 'com.squareup.okhttp3:okhttp:4.0.0'
+    implementation "com.squareup.okhttp3:okhttp:4.10.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
 //    implementation 'com.google.android.material:material:1.6.1'
 
     // agora library
@@ -59,5 +61,5 @@ dependencies {
     api 'io.agora:player:1.3.0'
     api 'io.agora.rtc:full-screen-sharing:3.7.0'
     // metabolt library
-    implementation("com.metabolt.medialibrary:metabolt:1.0.0-43-SNAPSHOT")
+    implementation("com.metabolt.medialibrary:metabolt:1.0.0")
 }
