--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,5 @@ dependencies {
     api 'io.agora:player:1.3.0'
     api 'io.agora.rtc:full-screen-sharing:3.7.0'
     // metabolt library
-    implementation("com.metabolt.medialibrary:metabolt:1.0.0")
+    implementation "com.rtc.metabolt:metabolt-all:1.1.0-89-SNAPSHOT"
 }
