--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "29.0.2"
 
     defaultConfig {
-        applicationId "io.agora.api.example"
+        applicationId "com.joyy.metabolt.example"
         minSdkVersion 22
         targetSdkVersion 29
         versionCode 1
