--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.agora.api.example">
+    package="com.joyy.metabolt.example">
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,9 +12,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/icon1024"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/icon1024"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:requestLegacyExternalStorage="true"
