feat: metabolt1.2.0开发版

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,8 @@ dependencies {
     api 'io.agora:player:1.3.0'
     api 'io.agora.rtc:full-screen-sharing:3.7.0'
     // metabolt library
-    implementation "com.rtc.metabolt:metabolt-all:1.1.0-129-SNAPSHOT"
+    //implementation "com.rtc.metabolt:metabolt-all:1.1.0-129-SNAPSHOT"
+    implementation "com.hagospacex.metabolt:metabolt-all:1.2.0-150-SNAPSHOT"
     //implementation "com.metabolt.medialibrary:metabolt:1.0.0"
     implementation "com.rtc.thunder:thunderbolt-fullvideo:3.8.0-5663-SNAPSHOT"
     implementation 'com.tencent.liteav:LiteAVSDK_TRTC:latest.release'
