--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,10 +67,7 @@ dependencies {
     implementation 'com.yanzhenjie:permission:2.0.2'
     implementation 'de.javagl:obj:0.2.1'
     implementation 'com.google.ar:core:1.0.0'
-    //implementation 'com.squareup.okhttp3:okhttp:4.0.0'
-    implementation "com.squareup.okhttp3:okhttp:4.10.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
-//    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
 
     // agora library
     api 'io.agora.rtc:full-sdk:3.7.0'
