--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,20 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    signingConfigs {
+        release {
+            keyAlias 'rfcff'
+            keyPassword 'gaosq020'
+            storeFile file('/Users/gaoshiqiang/Documents/rfcff.jks')
+            storePassword 'gaosq020'
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
