--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url "https://nexus-android.duowan.com/nexus/content/groups/public" }
+        maven { url "http://maven.joyyinc.com/nexus/content/repositories/releases" }
         maven { url 'https://jitpack.io' }
         google()
         jcenter()
